proper user login. fixed navigation and finished bootstrap integration

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,13 +6,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="brand" href="index.php">Warehousing</a>
+			<a class="brand" href="/">Warehousing</a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-					<li><a href="index.php">Home</a></li>
-					<li><a href="cart.php">Cart</a></li>
-					<li><a href="order.php">Orders</a></li>
-					<li><a href="#" onclick="logout()">Logout</a></li>
+					<li><a href="/">Home</a></li>
+					<li> <%= link_to "Login", login_path %> </li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
