--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#view</h1>
-<p>Find me in app/views/users/view.html.erb</p>
+
+<h2> <%= @user.username %> </h2>
+
+<b>Email: </b> <%= @user.email %>
+<br>
+
