--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,15 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <%= yield(:head) %>
   </head>
   <body>
     <%= render 'layouts/navigation' %>
-
     <div id="main" role="main">
       <div class="container">
         <div class="content">
            <div class="row">
             <div class="span12">
+              <%= render 'layouts/messages' %>
               <%= yield %>
             </div>
           </div>
