--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,6 +11,7 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li> <%= link_to "Login", login_path %> </li>
+					<li> <%= link_to "Logout", logout_path %> </li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
