--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,11 +10,13 @@
 	</thead>
 
 <%- @users.each do |user| -%>
-<tr>
-	<td style="text-align: center"><%= user.username %></td>
-	<td style="text-align: center"><%= user.email %></td>
-	<td style="text-align: center"><%= link_to "View profile", user_path(user) %></td>
-</tr>
+	<%- if user.id != session[:user_id] -%>
+		<tr>
+			<td style="text-align: center"><%= user.username %></td>
+			<td style="text-align: center"><%= user.email %></td>
+			<td style="text-align: center"><%= link_to "View profile", user_path(user) %></td>
+		</tr>
+	<%- end -%>
 <%- end -%>
 </table>
 <br>
