--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
       <div class="container">
         <div class="content">
            <div class="row">
-            <div class="span12">
+           	<div class="span2">
+           		<%= render 'layouts/sidebar' %>
+           	</div>
+            <div class="span10">
               <%= render 'layouts/messages' %>
               <%= yield %>
             </div>
