added wall & modified navigation and sidebar. added models

--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -1,6 +1,15 @@
 
-<h2> <%= @user.username %> </h2>
+<h2> <%= @user.username.capitalize %> </h2>
 
-<b>Email: </b> <%= @user.email %>
+<div class="row">
+	<div class="span3">
+		<img src="<%= @user.image%>"/>
+	</div>
+	<div class="span7">
+		<p> <b> Date of Birth </b> <%= @user.DOB %></p>
+		<p ><b> Email: </b> <%= @user.email %></p>
+		<p> <b> Name: </b> <%= @user.fullname %> </p>
+	</div>
+</div>
 <br>
 
