--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,8 +10,11 @@
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li> <%= link_to "Login", login_path %> </li>
-					<li> <%= link_to "Logout", logout_path %> </li>
+					<%- if session[:user_id] == nil -%>
+						<li> <%= link_to "Login", login_path %> </li>
+					<%-else -%>
+						<li> <%= link_to "Logout", logout_path %> </li>
+					<%-end -%>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
