--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,8 +2,9 @@
 	<div class="alert alert-error"> Login to access this section </div>
 <%-else -%>
 	<ul class="nav nav-tabs nav-stacked">
-		<li> <a href="#"> View profile </a></li>
-		<li> <a href="#"> Messages  </a> </li>
-		<li> <a href="#"> Lists  </a> </li>
+		<li> <%= link_to "Profile", user_wall_path(session[:user_id]) %></li>
+		<li> <%= link_to "Messages", user_message_path(session[:user_id]) %> </li>
+		<li> <%= link_to "Lists", user_list_path(session[:user_id]) %> </li>
+		<li> <%= link_to "Movies", movies_path %> </li>
 	</ul>
 <%- end -%>
