--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="brand" href="/">Warehousing</a>
+			<a class="brand" href="/">goToCinema</a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
