--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,6 +5,7 @@
 		<li> <%= link_to "Profile", user_wall_path(session[:user_id]) %></li>
 		<li> <%= link_to "Messages", user_message_path(session[:user_id]) %> </li>
 		<li> <%= link_to "Lists", user_list_path(session[:user_id]) %> </li>
+		<li> <%= link_to "Friends", user_friends_path(session[:user_id]) %> </li>
 		<li> <%= link_to "Movies", movies_path %> </li>
 	</ul>
 <%- end -%>
