--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,10 @@
 <h1>Listing movies</h1>
 
+<div class="alert alert-success" id="favoriteAdded" style="display: none">
+	<a class="close" data-dismiss="alert">&#215;</a>
+	Successfully added to favorites!
+</div>
+
 <table class="table">
   <tr>
   	<th></th>
@@ -7,6 +12,7 @@
     <th>Gen</th>
     <th>Actori</th>
     <th>Nota</th>
+    <th></th>
     <th></th>
   </tr>
 
@@ -18,8 +24,38 @@
     <td><%= movie.actori %></td>
     <td><%= movie.nota %></td>
     <td><%= link_to 'Show', movie %></td>
+    <td>
+    	<%#= link_to favorite_movie_path( movie ) do %>
+    	<a href="" onclick="favorite( <%= movie.id %> );return false;">	<i class='cus-star'> </i> </a>
+    	<%#- end -%>
+    </td>
   </tr>
 <% end %>
 </table>
 
 <br />
+
+<script type="text/javascript">
+
+	function favorite ( id )
+	{
+		console.log ( id )
+		data = 'id='+id ;
+		$.ajax({
+			type:"POST",
+			url: "movies/favorite",
+			data: data,
+			dataType:"json",
+			success: function(data){
+				console.log ( "win " ) ;
+				if ( data["success"] == true )
+				{
+					console.log ( "win" ) ;
+					$("#favoriteAdded").show();
+					setTimeout ( function () {$("#favoriteAdded").hide();}, 1500 ) ;
+				}
+			}
+		});
+	}
+
+</script>
