--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,8 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="brand" href="/">goToCinema</a>
+
+			<a class="brand" href="/"><img src=<%=asset_path "logo.png"%> height="25px" width="25px" style="display: inline"/></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
