--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing movies</h1>
+
 
 <div class="alert alert-success" id="favoriteAdded" style="display: none">
 	<a class="close" data-dismiss="alert">&#215;</a>
@@ -8,10 +8,10 @@
 <table class="table">
   <tr>
   	<th></th>
-    <th>Titlu</th>
-    <th>Gen</th>
-    <th>Actori</th>
-    <th>Nota</th>
+    <th>Title</th>
+    <th>Genre</th>
+    <th>Actors</th>
+    <th>Raitings</th>
     <th></th>
     <th></th>
   </tr>
