--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,10 +1,10 @@
 <%- if session[:user_id] == nil -%>
-	<div class="alert alert-error"> Login to access this section </div>
+
 <%-else -%>
 	<ul class="nav nav-tabs nav-stacked">
 		<li> <%= link_to "Profile", user_wall_path(session[:user_id]) %></li>
 		<li> <%= link_to "Messages", user_message_path(session[:user_id]) %> </li>
-		<li> <%= link_to "Lists", user_list_path(session[:user_id]) %> </li>
+		<li> <%= link_to "Favorites", user_list_path(session[:user_id]) %> </li>
 		<li> <%= link_to "Friends", user_friends_path(session[:user_id]) %> </li>
 		<li> <%= link_to "Movies", movies_path %> </li>
 	</ul>
